packages/astro/e2e/fixtures/errors/src/pages/svelte-syntax-error.astro
---
// TODO: Re-enable once Svelte is compatible with Vite v8
// import SvelteSyntaxError from '../components/svelte/SvelteSyntaxError.svelte';
---

<div>
  <!-- <SvelteSyntaxError /> -->
</div>
